--- a/src/application/layout/laporan.fxml
+++ b/src/application/layout/laporan.fxml
@@ -106,6 +106,28 @@
                   </AnchorPane>
                </content>
             </Tab>
+            <Tab text="Data Kegiatan">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <VBox layoutX="184.0" layoutY="399.0" prefHeight="34.0" prefWidth="201.0" />
+                        <TableView layoutX="5.0" layoutY="44.0" prefHeight="355.0" prefWidth="960.0" AnchorPane.bottomAnchor="77.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="60.0">
+                           <columns>
+                              <TableColumn prefWidth="39.0" text="Id" />
+                              <TableColumn prefWidth="299.0" text="Nama" />
+                              <TableColumn prefWidth="439.0" text="Kegiatan" />
+                              <TableColumn prefWidth="164.0" text="Tanggal" />
+                           </columns>
+                        </TableView>
+                        <HBox alignment="CENTER_LEFT" layoutX="864.0" layoutY="391.0" prefHeight="51.0" prefWidth="88.0" spacing="40.0" AnchorPane.rightAnchor="20.0">
+                           <children>
+                              <JFXButton buttonType="RAISED" prefHeight="25.0" prefWidth="84.0" style="-fx-background-color: green;" text="Print" textFill="WHITE" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </AnchorPane>
+               </content>
+            </Tab>
          </tabs>
       </TabPane>
    </children>
